[package]
name = "json_column"
version = "0.1.0"
authors = ["ms.kim <iris4865@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.3.5", default-features = false, features = [ "runtime-tokio", "macros", "mysql", "chrono" ] }
tokio = { version = "1.18.5", features = ["full"] }